syntax = "proto3";

option java_multiple_files = false;
option java_package = "de.tum.grpc_api";
option java_outer_classname = "ECSProto";

message NodeMessage {
    string host = 1;
    int32 port = 2;
}

message InitRequest {
    NodeMessage node = 1;
}

message UpdateRingRequest {
    NodeMessage node = 1;
}

service ECSService {
    rpc init(InitRequest) returns (google.protobuf.Empty) {}
    rpc updateRing(UpdateRingRequest) returns (google.protobuf.Empty) {}
}


